--- a/src/components/totalMarket/totalMarket.css
+++ b/src/components/totalMarket/totalMarket.css
@@ -1,7 +1,13 @@
 .total-markt-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  text-align: center;
+}
+
+.total-markt-body {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   text-align: center;
 }
 
