--- a/src/components/newsCard/newsCard.css
+++ b/src/components/newsCard/newsCard.css
@@ -1,14 +1,37 @@
+.news-card {
+  flex-basis: 30%;
+  cursor: pointer;
+  margin-bottom: 1rem;
+}
+
+.news-card a, .first-article a {
+  text-decoration: none;
+  color: var(--white-light);
+}
+
+.first-article {
+  flex-basis: 65%;
+  cursor: pointer;
+  margin-bottom: 1rem;
+}
+
+.first-article img {
+  height: auto;
+}
+
 .news-card-container {
+  height: 100%;
   display: flex;
   flex-direction: column;
-  flex-basis: 30%;
-  background-color: #ccc;
+  background-color: var(--gris-color-two);
   padding: 1rem;
   margin-top: 1rem;
+  color: var(--white-light);
 }
 
 .news-card-image img {
   width: 100%;
+  height: 20rem;
   object-fit: cover;
 }
 
@@ -19,16 +42,20 @@
   width: 100%;
 }
 
+.news-card-title {
+  padding: 0.5rem 0;
+}
+
 .news-card-desc {
   flex-grow: 1;
 }
 
 .news-card-title p {
-  font-size: 2rem
+  font-size: 1.5rem
 }
 
 .news-card-desc p {
-  font-size: 1.2rem
+  font-size: 1rem
 }
 
 .news-card-footer {
@@ -36,15 +63,34 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  padding-top: 1rem;
 }
 
 .news-card-footer img {
   background-size: cover;
 }
 
-.first-article {
-  flex-basis: 65%;
-  background-color: #ccc;
-  padding: 1rem;
-  margin-top: 1rem;
+@media screen and (max-width: 767px) and (min-width: 525px){
+  .news-card {
+    max-width: 48%;
+    flex-basis: 100%;
+  }
+  .first-article {
+    max-width: 48%;
+    flex-basis: 100%;
+  }
+  .news-card-footer {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 525px){
+  .news-card {
+    flex-basis: 100%;
+    width: 100%;
+  }
+  .first-article {
+    flex-basis: 100%;
+    width: 100%;
+  }
 }
