--- a/src/components/crypto/card/card.css
+++ b/src/components/crypto/card/card.css
@@ -53,7 +53,7 @@
   outline: none;
   padding: 0.5rem;
   background-color: var(--gris-color-two);
-  color: var(--white-color);
+  color: var(--border-color);
   border-radius: 0.2rem;
   font-size: 1rem;
   font-weight: 600;
