--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   --black-color: #000000;
   --white-color: #ffffff;
   --white-color-light: #ffffffd9;
-  --border-color: #333333;
+  --border-color: #00C6CF;
   --gris-color-two: #151515;
   --font-family-title: 'Shadows Into Light', cursive;
 }
